# tb-bot-rs

./: .dockerignore  .gitignore  AC-HB-Class-SRD-List.json  Cargo.toml  Dockerfile  README.md  schema.patch
.github/workflows/: ci.yml
docker/: Dockerfile
migrations/2022-11-23-132301_create_guild_tomes/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/commands/: mod.rs  spells.rs  tomes.rs
src/data/: mod.rs
src/data/sources/: avrae.rs  fiveetools.rs  json.rs  mod.rs
