[package]
name = "avrae-plus-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
anyhow = "1"

convert_case = "0.6"

poise = "0.5"

futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-stream = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = "0.11"
lazy_static = "1"
regex = "1"
itertools = "*"

diesel = { version = "2", features = ["mysql"] }
diesel_migrations = "2"